--- a/web/package.json
+++ b/web/package.json
@@ -8,8 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.22.0",
+    "@bytemd/plugin-highlight": "^1.22.0",
+    "@bytemd/plugin-math": "^1.22.0",
+    "@bytemd/vue-next": "^1.22.0",
     "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^13.4.0",
+    "bytemd": "^1.22.0",
+    "highlight.js": "^11.6.0",
     "lodash-es": "^4.17.21",
     "ant-design-vue": "4.2.6",
     "axios": "^1.6.8",
